# radiator_rust

./: .gitignore  Cargo.toml  partition_table.csv  readme.md
.cargo/: config.toml
client/: encode.py  main.py
docs/: flash.md  front_board.md  prompt.txt  readme.md  todo.md  user.md
schematics/dev_board/: dev_board.kicad_pcb  dev_board.kicad_prl  dev_board.kicad_pro  dev_board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
schematics/dev_board/sensor.pretty/: AHT20.kicad_mod
schematics/diagnostics/: diagnostics.kicad_pcb  diagnostics.kicad_prl  diagnostics.kicad_pro  diagnostics.kicad_sch  fp-info-cache
schematics/diagnostics/MMT-104-02-L-DH/: MMT-104-02-L-DH.stp  SAMTEC-MMT-104-02-X-DH.kicad_mod
schematics/diagnostics/custom.pretty/: USB-C-SMD_TYPE-C-31-M-13.kicad_mod
schematics/diagnostics_simple/: custom.bak  diagnostics.kicad_pcb  diagnostics.kicad_prl  diagnostics.kicad_pro  diagnostics.kicad_sch
schematics/diagnostics_simple/MMT-104-02-L-DH/: SAMTEC-MMT-104-02-X-DH.kicad_sym  readme-and-terms-of-use-3d-cad-models.txt
schematics/diagnostics_simple/custom.pretty/: SAMTEC-MMT-104-02-X-DH.kicad_mod
schematics/front/: 8836.bak  8836.kicad_sym  ESP32-S2-MINI-2.bak  fp-info-cache  fp-lib-table  front.kicad_pcb  front.kicad_prl  front.kicad_pro  front.kicad_sch  ideas.md  sym-lib-table  usb-c.bak  usb-c.kicad_sym
schematics/front/8836.pretty/: DRV8836.kicad_mod
schematics/front/CLT-104-02-F-D-BE-K-TR/: CLT-104-02-F-D-BE-K-TR.kicad_sym  CLT-104-02-F-D-BE-K-TR.stp  SAMTEC_CLT-104-02-F-D-BE-K-TR.kicad_mod  readme-and-terms-of-use-3d-cad-models.txt
schematics/front/MMT-108-02-L-SH/: MMT-108-02-L-SH.stp  SAMTEC-MMT-108-02-X-SH.kicad_mod  SAMTEC-MMT-108-02-X-SH.kicad_sym  readme-and-terms-of-use-3d-cad-models.txt
schematics/front/connector.pretty/: SAMTEC-MMT-108-02-X-SH.kicad_mod  SAMTEC_CLT-104-02-F-D-BE-K-TR.kicad_mod
schematics/front/esp32-s2.pretty/: WIFI-SMD_ESP32-MINI-1-N4.kicad_mod
schematics/front/usb-c.pretty/: MICRO-USB-TH_U-MICRS05P-BF00.kicad_mod  TYPE-C-SMD_918-468K2029Y50001.kicad_mod  Untitled.kicad_mod
schematics/top/: custom.bak  custom.kicad_sym  fp-info-cache  sensor.kicad_sym  top.kicad_pcb  top.kicad_prl  top.kicad_pro  top.kicad_sch
schematics/top/CLT-108-02-F-D-BE-K-TR/: CLT-108-02-F-D-BE-K-TR.kicad_sym  CLT-108-02-F-D-BE-K-TR.stp  SAMTEC_CLT-108-02-F-D-BE-K-TR.kicad_mod  readme-and-terms-of-use-3d-cad-models.txt
schematics/top/custom.pretty/: SAMTEC_CLT-104-02-F-D-BE-K-TR.kicad_mod  SAMTEC_CLT-108-02-F-D-BE-K-TR.kicad_mod
sd/: CONFIG.txt
time/: main.py
web/: brightness.html  calibrate.html  index.html  missing.md  network.html  settings.html  styles.css  summer.html  thermostat.html  todo.md  winter.html
