[package]
edition      = "2021"
name         = "radiator_rust"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "radiator_rust"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }
heapless = {  version = "0.8.0", features = ["serde"] }
critical-section = "1.2.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "wifi",
] }
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
  "proto-ipv4"
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "socket-dhcpv4",
  "iface-neighbor-cache-count-8",
  "proto-ipv4",
  "socket-tcp",
  "medium-ethernet",
  "iface-neighbor-cache-count-8",
] }
atoi = { version = "2.0", default-features = false }
itoa = { version = "1.0.15", default-features = false }
base64 = { version = "0.22", default-features = false }
esp-println = { version = "0.15.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.17.0", features = ["esp32c3", "println"] }
embedded-sdmmc = "0.9.0"
embedded-hal-bus = "0.3.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = {version = "1.0.219", default-features = false, features = ["derive"]}
embedded-stepper = "0.1.2"
dht22-sensor = { version = "0.1.0" }
time = { version = "0.3", default-features = false, features = ["macros", "serde"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embassy-sync = "0.7.1"
static_cell = "2.1.1"
embassy-futures = "0.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
